fetched the page to NYT api

--- a/style-page2.css
+++ b/style-page2.css
@@ -41,7 +41,7 @@ header h3 {
 
 .section-welcome {
   display: flex;
-  padding: 64px 10% 64px 10%;
+  padding: 32px 10% 32px 10%;
 }
 
 .section-welcome #back-logo {
@@ -50,7 +50,7 @@ header h3 {
 }
 
 .news-fill {
-  padding: 96px 10%;
+  padding: 96px 10% 30vh 10%;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
@@ -169,7 +169,7 @@ header h3 {
 
 .news-fill .news-page .bottom-part .likes-comments {
   display: flex;
-  gap: 14px;
+  gap: 10px;
   align-items: center;
 }
 
