--- a/style-page1.css
+++ b/style-page1.css
@@ -55,6 +55,7 @@ header h3 {
   padding: 0 10%;
   display: flex;
   flex-direction: column;
+  margin-bottom: 30vh;
 }
 
 .section-news .news {
@@ -82,6 +83,8 @@ header h3 {
   width: 24px;
   height: 24px;
   border-radius: 50%;
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
 }
 
 .section-news .news .left .top h5 {
@@ -128,7 +131,7 @@ header h3 {
 }
 
 .section-news .news .left .info-bottom .info .javascript {
-  width: 107px;
+  width: max-content;
   height: 30px;
   padding: 6px 16px;
   background: linear-gradient(
