fetched second page

--- a/style-page1.css
+++ b/style-page1.css
@@ -55,7 +55,6 @@ header h3 {
   padding: 0 10%;
   display: flex;
   flex-direction: column;
-  margin-bottom: 30vh;
 }
 
 .section-news .news {
@@ -103,7 +102,13 @@ header h3 {
   padding-right: 4%;
 }
 
-.section-news .news .left .text h2 {
+.section-news .news .left .text #article-name {
+  display: flex;
+  text-align: left;
+  padding: 0;
+}
+
+.section-news .news .left .text #article-name h2 {
   font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 700;
