--- a/style-page2.css
+++ b/style-page2.css
@@ -74,6 +74,8 @@ header h3 {
   width: 64px;
   height: 64px;
   border-radius: 50%;
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
 }
 
 .news-fill .news-page .top-part .top-left .text-info {
